--- a/Kozmeticki salon/kontakt.html
+++ b/Kozmeticki salon/kontakt.html
@@ -25,6 +25,7 @@
                         <li class="nav-item"><a class="nav-link" href="#!">Zakazivanje</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Zakazani termini</a></li>
                         <li class="nav-item"><a class="nav-link" href="./kontakt.html">Kontakt</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./prijavna.php">Prijava</a></li>
                     </ul>
                 </div>
             </div>
