--- a/Kozmeticki salon/kontakt.html
+++ b/Kozmeticki salon/kontakt.html
@@ -22,10 +22,9 @@
                         <li class="nav-item"><a class="nav-link active"  href="./index.php">Početna</a></li>
                         <li class="nav-item"><a class="nav-link" href="./onama.html">O nama</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Cenovnik</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Zakazivanje</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./zakazivanje.php">Zakazivanje</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Zakazani termini</a></li>
                         <li class="nav-item"><a class="nav-link" href="./kontakt.html">Kontakt</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./prijavna.php">Prijava</a></li>
                     </ul>
                 </div>
             </div>
