--- a/Kozmeticki salon/onama.html
+++ b/Kozmeticki salon/onama.html
@@ -21,7 +21,7 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link active"  href="./index.php">Početna</a></li>
                         <li class="nav-item"><a class="nav-link" href="./onama.html">O nama</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Cenovnik</a></li>
+                        <li class="nav-item"><a class="nav-link" href="cenovnik.php">Cenovnik</a></li>
                         <li class="nav-item"><a class="nav-link" href="./zakazivanje.php">Zakazivanje</a></li>
                         <li class="nav-item"><a class="nav-link" href="./zakazani.php">Zakazani termini</a></li>
                         <li class="nav-item"><a class="nav-link" href="./kontakt.html">Kontakt</a></li>
