--- a/Kozmeticki salon/kontakt.html
+++ b/Kozmeticki salon/kontakt.html
@@ -39,7 +39,7 @@
                     <p><h4>
                         <b>Adresa: Kneza Miloša 14, 11000 Beograd </b><h4>
                             <b>Telefon: 011 3650800</b></p>
-                    <a class="btn btn-primary" href="#!">Zakaži termin</a>
+                    <a class="btn btn-primary" href="./zakazivanje.php">Zakaži termin</a>
                     <div class="col-sm-3 full-height fancy">
 
                         <div>
